<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/exitSelection"
        android:title="@string/exit_selection"
        android:visible="false"
        android:icon="@drawable/ic_close"
        app:showAsAction="ifRoom"
        />
    <item
        android:id="@+id/selectAll"
        android:title="@string/select_all"
        android:visible="false"
        android:icon="@drawable/ic_select_all"
        app:showAsAction="ifRoom"
        />
    <item
        android:id="@+id/delete"
        android:title="@string/delete"
        android:visible="false"
        android:icon="@drawable/ic_delete"
        app:showAsAction="ifRoom"
        />

    <item
        android:id="@+id/selectMode"
        android:title="@string/select_mode"
        android:visible="true"
        android:icon="@drawable/ic_history_delete_black"
        app:showAsAction="ifRoom"
        />



</menu>