<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarZxing"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_arrow_back_black"
        app:title="@string/scan_result"
        app:titleTextColor="@color/black"
        />

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:cardCornerRadius="16dp"
        app:cardElevation="6dp"
        app:layout_constraintTop_toBottomOf="@+id/toolbarZxing">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="80dp">

            <ImageView
                android:id="@+id/ivIconTypeZxing"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_gravity="center" />
            <TextView
                android:id="@+id/tvTypeLabelZxing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="12dp"
                android:text="@string/type_text"
                android:textSize="20dp"
                android:textStyle="bold"
                android:textColor="@color/black"
                />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginVertical="16dp"
                android:background="#EEEEEE"/>
            <TextView
                android:id="@+id/tvContentZxing"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:maxLines="3"
                android:text="@string/content_label"
                android:textSize="20dp"
                android:textColor="@color/black"
                />
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingVertical="80dp"
        android:paddingHorizontal="20dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnActionZxing"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:text="@string/open"
            app:cornerRadius="8dp"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnShareZxing"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:text="@string/share"
            app:cornerRadius="8dp"
            android:layout_marginTop="20dp"/>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>